README added and changes in main files

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
         />
         <h3 id="name" class="nameAuthor">Siamak</h3>
         <p id="explain" class="expAuthor">
-          1: Siamak Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Reprehenderit ullam possimus vitae id esse alias necessitatibus
-          laborum corporis quo labore aperiam harum corrupti laudantium suscipit
-          eos, praesentium sunt eaque minus!
+          The spot was perfect for camouflage. At least that's what she thought
+          when she picked the spot. She couldn't imagine that anyone would ever
+          be able to see her in these surroundings. So there she sat, confident
+          that she was hidden from the world and safe from danger.
+          Unfortunately, she had not anticipated that others may be looking upon
+          her from other angles, and now they were stealthily descending toward
+          her hiding spot.
         </p>
       </section>
       <section class="botSide">
